# agentic-memory-and-agents

./: README.md  banking_customers_indian.db  chatbot_basics_tutorial.ipynb  langchain_agent_advanced.ipynb  langchain_agent_basic.ipynb  long-term-memory-tutorial.ipynb  messages_append.ipynb  pandas_agent.ipynb  pandas_csv.py  pandas_practic2.ipynb  pandas_practice.ipynb  pandas_tutorial.ipynb  pyproject.toml  short_term_memory.ipynb  sql_agent_human_in_the_loop.ipynb  sql_agent_human_in_the_loop_v2.ipynb  sql_agent_tutorial.ipynb  sql_banking_dummy_data_creator.ipynb  sql_joins_tutorial.ipynb  sql_tutorial.ipynb  sql_tutorial_beginners.ipynb  students.db
data/: college_students.csv  hospital_visits.csv  logistics_shipments.csv
