[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "matplotlib>=3.10.8",
    "mem0ai>=1.0.1",
    "pandas>=2.3.3",
    "pprintpp>=0.4.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
]
